--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
         <link href="~/Content/bootstrap-responsive.min.css" rel="stylesheet">
         <script src="~/Scripts/jquery-1.9.1.min.js"></script>
         <script src="~/Scripts/bootstrap.min.js"></script>
+        <script src="~/Scripts/louder.js"></script>
         <meta name="viewport" content="width=device-width" />
     </head>
     <body>
@@ -35,11 +36,10 @@
         </div>
       </div>
     </div>
-
     <div class="container">
+        <div class="latest-chant"></div>
 
         @RenderBody()
-
     </div> <!-- /container -->
     </body>
 </html>
