update latest chant.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,1 +1,7 @@
-﻿
+﻿<div class="btn-group">
+    <button id="btn-lyrics">Lyrics</button>
+    <button id="btn-history">History</button>
+    <button id="btn-errata">Errata</button>
+</div>
+
+<div class="chant-detail"></div>
