--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">Noticatations</a></li>
               <li><a href="#about">Vote</a></li>
-              <li><a href="#contact">Chant</a></li>
+              <li><a href="/capo">Capo</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
