--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">Noticatations</a></li>
+              <li><a href="#about">Notifications</a></li>
               <li><a href="#about">Vote</a></li>
               <li><a href="#contact">Chants</a></li>
             </ul>
