--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,13 +27,14 @@
           <a class="brand" href="#">KCCauldron: Louder!</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">Notifications</a></li>
-              <li><a href="#about">Vote</a></li>
-              <li><a href="#contact">Chants</a></li>
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="user">Notifications</a></li>
+              <li><a href="vote">Vote</a></li>
+              <li><a href="capo">Capo</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
+          </div>
     <div class="container">
         <div class="latest-chant"></div>
 
