--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<form action="/user/addUser" method="POST">
-    Phone: <input type="text" name="humber"/><br/>
+    Phone: <input type="text" name="number"/><br/>
     Section: <select name="section">
                  <option value="M1">M1</option>
                  <option value="M2">M2</option>
@@ -43,5 +43,5 @@
                  <option value="132">132</option>
              </select>
     <br/>
-    <button class="btn" onclick="AddUser(); return false;">Sign Up!</button>
+    <button class="btn">Sign Up!</button>
 </form>
