--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,44 +1,47 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>@ViewBag.Title KCCauldron - Louder!</title>
-        <link href="~/Content/bootstrap.min.css" rel="stylesheet">
-        <style>
-            body {
-                padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-            }
-        </style>
-        <link href="~/Content/bootstrap-responsive.min.css" rel="stylesheet">
-        <script src="~/Scripts/jquery-1.9.1.min.js"></script>
-        <script src="~/Scripts/bootstrap.min.js"></script>
-        <script src="~/Scripts/louder.js"></script>
-        <meta name="viewport" content="width=device-width" />
-    </head>
-    <body>
+<head>
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title KCCauldron - Louder!</title>
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+        }
+    </style>
+    <link href="~/Content/bootstrap-responsive.min.css" rel="stylesheet">
+    <script src="~/Scripts/jquery-1.9.1.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/louder.js"></script>
+    <meta name="viewport" content="width=device-width" />
+</head>
+<body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">KCCauldron: Louder!</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
-              <li><a href="user">Notifications</a></li>
-              <li><a href="vote">Vote</a></li>
-              <li><a href="capo">Capo</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-          </div>
-    <div class="container">
-        <div class="latest-chant"></div>
+        <div class="navbar-inner">
+            <div class="container">
+                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="brand" href="#">KCCauldron: Louder!</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        @Html.MenuLink("Home","Index", "Home")
+                        @Html.MenuLink("Notifications", "Index", "User")
+                        @Html.MenuLink("Vote", "Index", "Vote")
+                        @Html.MenuLink("Capo", "Index", "Capo")
 
-        @RenderBody()
-    </div> <!-- /container -->
-    </body>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+        </div>
+        <div class="container">
+            <div class="latest-chant"></div>
+
+            @RenderBody()
+        </div>
+        <!-- /container -->
+</body>
 </html>
