--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                         @Html.MenuLink("Home","Index", "Home")
                         @Html.MenuLink("Notifications", "Index", "User")
                         @Html.MenuLink("Vote", "Index", "Vote")
+                        @Html.MenuLink("Top Votes", "TopVotes", "Vote")
                         @Html.MenuLink("Capo", "Index", "Capo")
 
                     </ul>
