--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="btn-group">
-    <button id="btn-lyrics">Lyrics</button>
-    <button id="btn-history">History</button>
-    <button id="btn-errata">Errata</button>
+    <button class="btn btn-info" id="btn-lyrics">Lyrics</button>
+    <button class="btn btn-info" id="btn-history">History</button>
+    <button class="btn btn-info" id="btn-errata">Errata</button>
 </div>
 
-<div class="chant-detail"></div>
+<div class="chant-detail" style="padding-top: 15px;"></div>
