--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -45,7 +45,7 @@
                      <option value="132">132</option>
                  </select>
         <br/>
-        <button class="btn">Sign Up!</button>
+        <button class="btn btn-primary">Sign Up!</button>
     </form>
 } else {
     @Request.Cookies["number"].Value  @Request.Cookies["section"].Value   
