--- a/Views/Vote/Index.cshtml
+++ b/Views/Vote/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<KcCauldronCapo.Model.Chant>
 
-@foreach (var chant in Model)
-{
-    <button class="btn btn-large" onclick="Vote(@chant.CHANT_ID); return false;">@chant.CHANT_NAME</button><br/>
-}
+<div class="container-fluid">
+    @foreach (var chant in Model)
+    {
+        <button class="btn btn-large btn-block" onclick="Vote(@chant.CHANT_ID); return false;">@chant.CHANT_NAME</button>
+    }
+</div>
