--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title KCCauldron - Louder!</title>
+    <title>@ViewBag.Title KCCauldron - CAPPO</title>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -24,18 +24,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="/">KCCauldron: Louder!</a>
+                <a class="brand" href="/">KCCauldron: CAPPO</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         @Html.MenuLink("Notifications", "Index", "User")
                         @Html.MenuLink("Vote", "Index", "Vote")
                         @Html.MenuLink("Top Votes", "TopVotes", "Vote")
                         @Html.MenuLink("Capo", "Index", "Capo")
-
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
-            </div>
+            </div>  
         </div>
         </div>
         <div class="container" style="padding: 10px;">
