--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                         @Html.MenuLink("Vote", "Index", "Vote")
                         @Html.MenuLink("Top Votes", "TopVotes", "Vote")
                         @Html.MenuLink("Capo", "Index", "Capo")
+                        @Html.MenuLink("Alert", "Index", "Alert")
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
