Added Chant Submission Tab

--- a/Views/Alert/Index.cshtml
+++ b/Views/Alert/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿<form action="/alert/SendMessage" method="POST">
-    Message: <input type="text" name="message"
+    Message: <textarea name="message"
+        rows="4"
+        cols="20"
         maxlength="100"
-        /><br/>
+        ></textarea>
+    <br />
     <button class="btn btn-primary">Send It!</button>
 </form>
