--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                         @Html.MenuLink("Top Votes", "TopVotes", "Vote")
                         @Html.MenuLink("Capo", "Index", "Capo")
                         @Html.MenuLink("Alert", "Index", "Alert")
+                        @Html.MenuLink("Submit A Song", "Index", "Submission")
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
