--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="/">KCCauldron: CAPPO</a>
+                <a class="brand" href="/"><img src="https://dl.dropboxusercontent.com/u/49506731/cappo-logo.png"></a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         @Html.MenuLink("Notifications", "Index", "User")
