--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         </div>
         <div class="container" style="padding: 0 10px 10px 10px;">
             <div class="latest-chant-container" style="width: 320px; height: 180px; padding-bottom: 5px;">
-                <div class="latest-chant" style="color: #FFFFFF; background-color:rgba(255,0,0,0.5);"></div>
+                <div class="latest-chant" style="color: #FFFFFF; background-color:rgba(0, 0, 0, 0.7);"></div>
             </div>	
 
             @RenderBody()
