--- a/Views/Capo/Index.cshtml
+++ b/Views/Capo/Index.cshtml
@@ -1,8 +1,13 @@
 ﻿@model IEnumerable<KcCauldronCapo.Model.Chant>
 
+
+<button class="btn btn-info" onclick="ClearVotes(); return false;">Clear Votes</button>
+
+<br/>
 <div class="container-fluid">
     @foreach (var chant in Model)
     {
         <button class="btn btn-large btn-block" onclick="SetCurrentChant(@chant.CHANT_ID); return false;">@chant.CHANT_NAME</button>
     }
 </div>
+
