--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,12 +29,15 @@
                 <a class="brand" href="/"><img src="https://dl.dropboxusercontent.com/u/49506731/cappo-logo.png"></a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        @Html.MenuLink("Notifications", "Index", "User")
-                        @Html.MenuLink("Vote", "Index", "Vote")
-                        @Html.MenuLink("Top Votes", "TopVotes", "Vote")
-                        @Html.MenuLink("Capo", "Index", "Capo")
-                        @Html.MenuLink("Alert", "Index", "Alert")
+                        
+                        @Html.MenuLink("Get Notifications", "Index", "User")
                         @Html.MenuLink("Submit A Song", "Index", "Submission")
+                        @Html.MenuLink("Vote", "Index", "Vote")
+                        
+                        @Html.MenuLink("Capo", "Index", "Capo")
+                        @Html.MenuLink("Send Alert", "Index", "Alert")
+                        @Html.MenuLink("Top Votes", "TopVotes", "Vote")
+                        
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
